# glon

./: CHANGELOG.md  Makefile  README.md  TODO.md  goal.yaml  project.sh  pyproject.toml
gc/: __init__.py  cli.py
gc_toolkit/: __init__.py  cli.py  core.py  utils.py
glon/: __init__.py  cli.py
klo/: __init__.py
project/: README.md  analysis.json  analysis.toon  analysis.yaml  calls.mmd  compact_flow.mmd  context.md  dashboard.html  evolution.toon  flow.mmd  flow.toon  map.toon  project.toon  project.yaml
tests/: test_cli.py  test_core.py  test_utils.py
