[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gc"
version = "0.1.4"
description = "Python package for garbage collection utilities and memory management"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Tom Sapletta", email = "tom@example.com"},
    {name = "Tom Sapletta", email = "tom@sapletta.com"},
]
maintainers = [
    {name = "Tom Sapletta", email = "tom@example.com"}
]
keywords = ["garbage-collection", "memory", "profiling", "utilities"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Topic :: Software Development :: Testing"
]
requires-python = ">=3.8"
dependencies = [
    "psutil>=5.8.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0"
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]

[project.scripts]
gc = "gc.cli:main"

[project.urls]
Homepage = "https://github.com/tom-sapletta/gc"
Repository = "https://github.com/tom-sapletta/gc.git"
Issues = "https://github.com/tom-sapletta/gc/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["gc*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=gc --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
